# geodesic-elf

./: .gitignore  LICENSE  README.md  pyproject.toml
docker/: Dockerfile  entrypoint.sh
elf/: __init__.py  config.py  model.py
elf/diffusion/: __init__.py
elf/modules/: __init__.py  attention.py  transformer.py
elf/training/: __init__.py
experiments/: train.py
experiments/configs/: README.md  gsm8k_ce_pretrain.yaml  gsm8k_dual.yaml
experiments/geodesic_analysis/: __init__.py  diagnostics.py  geodesic.py  visualize.py
scripts/analysis/: bootstrap_confidence.py  cluster_trajectories.py  cross_seed_correlation.py  discretization_sensitivity.py  downstream_eval.py  fork_divergence.py  gradient_geometry_coupling.py  lr_intervention.py  lyapunov_analysis.py  metric_sensitivity.py  phase_transition_profile.py  plot_analysis.py  weight_interpolation.py  weight_perturbation.py
scripts/eval/: batch_eval_geodesic.py  compare_ema_inline.py  compute_geodesic_ratio.py
scripts/train/: download_gsm8k.py  train.sh  train_tokenizer.py
scripts/viz/: extract_intermediate_probs.py  paper_figures.py  running_example_probs.py
