[project]
name = "geodesic-elf"
version = "0.2.0"
description = "Geodesic Energy Ratio — Training-dynamics diagnostic for continuous diffusion language models"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "tokenizers>=0.14",
    "matplotlib>=3.7",
]

[project.urls]
Repository = "https://github.com/elsRobin/geodesic-elf"

[project.optional-dependencies]
train = [
    "datasets>=2.14",
    "accelerate>=0.20",
    "wandb>=0.15",
]
analysis = [
    "rich>=13.0",
    "scipy>=1.10",
]
all = [
    "geodesic-elf[train,analysis]",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["elf*", "experiments*"]
